# mos6502

./: Cargo.toml  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: tests.yml
hex/: ASMmchess.txt  convert.py
roms/: apple1basic.md
src/: apple1.rs  asm.rs  cli.rs  cpu.rs  functional-tests.rs  lib.rs  main.rs  mem.rs  operation.rs  utils.rs
tests/: cpu_test.rs
