[package]
name = "mos6502"
version = "0.1.0"
authors = ["Alexander Akhmetov <me@aleks.sh>"]
edition = "2018"

[lib]
name = "mos6502"
path = "src/lib.rs"
authors = ["Alexander Akhmetov <me@aleks.sh>"]
edition = "2018"

[[bin]]
name = "mos6502-functional-tests"
path = "src/functional-tests.rs"
required-features = ["build-binary"]

[dependencies]
log = "0.4"
env_logger = {version = "0.6.1", optional = true }
clap = {version = "2.33.0", optional = true }

[features]
build-binary = ["clap", "env_logger"]
