[package]
name = "mos6502"
version = "0.1.0"
authors = ["Alexander Akhmetov <me@aleks.sh>"]
edition = "2021"

[lib]
name = "mos6502"
path = "src/lib.rs"
edition = "2018"

[[bin]]
name = "mos6502-functional-tests"
path = "src/functional-tests.rs"
required-features = ["build-binary"]

[dependencies]
log = "0.4"
env_logger = {version = "0.7.1", optional = true }
clap = {version = "4.5.14", optional = true }

[features]
build-binary = ["clap", "env_logger"]
